sumo/tests/duarouter/errors/false_output/errors.duarouter
Error: Could not build output file 'output/routes.rou.xml'.
Quitting (on error).
